# AgentShield

./: .gitignore  LICENSE  README.md
backend/: .env.example  Dockerfile  Dockerfile.beat  Dockerfile.worker  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: admin.py  agents.py  alerts.py  (+21 more)
backend/app/middleware/: auth.py  budget_check.py  plan_limits.py  rate_limit.py
backend/app/models/: user.py
backend/app/schemas/: agent.py  alert.py  analytics.py  audit.py  billing.py  budget.py  forecast.py  guardrail.py  pii.py  recommendation.py  report.py  session.py  share.py  team.py  track.py  violation.py  webhook.py
backend/app/services/: aggregation.py  alerts.py  analytics.py  anomaly.py  api_keys.py  audit.py  brevo.py  budgets.py  claude.py  forecast.py  guardrails.py  pdf.py  pii.py  pricing.py  recommendations.py  replay.py  sessions.py  slack.py  stripe_service.py  teams.py  tracking.py  webhooks.py
backend/app/utils/: errors.py  pii_patterns.py  redis.py  supabase.py
backend/app/websocket/: auth.py  manager.py
backend/app/workers/: celery_app.py  tasks_aggregation.py  tasks_alerts.py  tasks_anomaly.py  tasks_forecast.py  tasks_guardrails.py  tasks_maintenance.py  tasks_recommendations.py  tasks_reports.py  tasks_smart_alerts.py  tasks_webhooks.py
backend/tests/: conftest.py  test_api_keys.py  test_pii.py  test_pricing.py  test_sessions.py  test_track.py
sdk/: .env.example  README.md  pyproject.toml
sdk/agentshield/: __init__.py  _config.py  client.py  exceptions.py  extractors.py  models.py  pii.py  pricing.py  sessions.py  shield.py  steps.py
sdk/agentshield/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  llamaindex.py
sdk/tests/: conftest.py  test_client.py  test_exceptions.py  test_extractors.py  test_pii.py  test_pricing.py  test_sessions.py  test_shield.py
(+219 files in other folders)
